# bot_movie

./: README.md  bot.py  movie.py  pre-commit-config.yaml  pyproject.toml  start_pre-commit.sh
